Main and navbar componets are positionated correctly

--- a/src/assets/styles/lib/_variables.scss
+++ b/src/assets/styles/lib/_variables.scss
@@ -13,7 +13,8 @@ $succes-color: #2F71F7;
 
 // Tipografía
 $basefont: 'Raleway', sans-serif;
-$fontcolor: #261064;
+$list-font-color: #261064;
+$font-color: #fff;
 $basefontsize: 40px;
 $listfontsize: 20px;
 
