--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -3,20 +3,27 @@
 .navbar__container {
     width: 100%;
     height: 60px;
-    background-color: aquamarine;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    z-index: 3;
 }
 
 .navbar__list {
     display: flex;
-    width: 40%;
+    max-width: 40%;
     margin: 0 auto;
     padding-top: 20px;
     list-style: none;
     justify-content: space-around;
 }
 
+a {
+    text-decoration: none;
+}
+
 .list {
-    color: #271164;
+    color: $list-font-color;
     font-family: 'Raleway';
     font-weight: bold;
 }
