Setting variables, creating main components and changing default styles

--- a/src/assets/styles/lib/_variables.scss
+++ b/src/assets/styles/lib/_variables.scss
@@ -1,9 +1,11 @@
 
 // Branding colors
 
-$primary-color: #261064;
+$primary-color: #320D77;
 $secondary-color: #310D0D;
 $third-color: #D7DCFF;
+$title-color: #4075FF;
+$light-color: #E5E5E5;
 
 
 // Alert colors
