--- a/src/components/main/_main.scss
+++ b/src/components/main/_main.scss
@@ -4,44 +4,58 @@ html {
     height: 100%;
 }
 .main__container {
-    max-width: 400px;
+    max-width: 80%;
+    justify-content: space-evenly;
+    height: 70vh;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    margin-top: 100px;
-    justify-content: center;
-    text-align: center;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top: -60;
-    text-align: center;
+    margin-top: 200px;
+}
+.image__container {
+    width: 50%;
+    max-width: 400px;
+}
+.profile__image {
+    height: 350px;
+    width: 350px;
+    border-radius: 50%;
 }
 
 .main__heading {
     font-family: $basefont;
-    text-transform: uppercase;
     color: $font-color;
     margin: 0;
-    font-size: 38px;
+    font-size: 36px;
+    font-weight: normal;
+    text-align: start;
+}
+.main__title {
+    font-family: $basefont;
+    color: $title-color;
+    font-weight: bold;
+    font-size: 70px;
+    text-align: start;
+    margin: 30px 0px;
 }
 .main__subheading {
     color: $font-color;
-    font-weight: lighter;
-    font-size: 24px;
-}
-
-.profile__image {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
+    font-weight: bold;
+    font-size: 34px;
+    text-align: start;
 }
 
 .main__heading2 {
-    @extend .main__heading;
+    width: 100%;
     margin-top: 40px;
     font-size: 33px;
+    display: inline-block;
+    text-align: center;
 
+}
+
+
+@media screen and (max-width: 400px) {
+    .main__container {
+          margin-top: 30px;
+    }
 }
