--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -27,3 +27,9 @@ a {
     font-family: 'Raleway';
     font-weight: bold;
 }
+
+@media screen and (min-width: 300px) {
+    .navbar__container{
+        max-width: 100%;
+    }
+}
