--- a/src/components/main/_main.scss
+++ b/src/components/main/_main.scss
@@ -6,7 +6,7 @@ html {
 .main__container {
     max-width: 80%;
     justify-content: space-evenly;
-    height: 70vh;
+    height: 60vh;
     margin: 0 auto;
     display: flex;
     margin-top: 200px;
@@ -45,11 +45,11 @@ html {
 }
 
 .main__heading2 {
+    @include Fonts(45px);
     width: 100%;
-    margin-top: 40px;
-    font-size: 33px;
     display: inline-block;
     text-align: center;
+    margin: 0px;
 
 }
 
