--- a/src/components/skillBadge/_skillBadge.scss
+++ b/src/components/skillBadge/_skillBadge.scss
@@ -1,1 +1,21 @@
 @import '../../assets/styles/styles.scss';
+
+.skills {
+    margin: 0 auto;
+    color: $font-color;
+    text-align: center;
+    padding: 30px;
+    border-radius: 20px;
+    &:hover {
+        background-color:$font-color;
+        transition: 0.6s;
+        color:$primary-color;
+        
+    }
+}
+
+.skills__title2 {
+    font-weight: bold;
+    font-size: 18px;
+    margin: 10px 0px;
+}
