--- a/src/components/skills/_skills.scss
+++ b/src/components/skills/_skills.scss
@@ -21,3 +21,9 @@
     text-align: center;
 }
 
+@media screen and (max-width: 420px) {
+    .skills__container {
+        display: block;
+    }
+}
+
