--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -12,7 +12,7 @@
     padding: 25px 70px;
     font-size: 26px;
     margin: 0 auto;
-    margin: 50px 10px;
+    margin: 40px 10px 90px 10px;
     font-weight: bold;
     outline: 0;
     border-radius: 20px;
