--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -28,8 +28,16 @@ a {
     font-weight: bold;
 }
 
-@media screen and (min-width: 300px) {
+@media screen and (max-width: 420px) {
     .navbar__container{
         max-width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+    .navbar__list {
+        display: block;
+        max-width: 100%;
+        margin: 0px auto;
+        padding: 0px;
     }
 }
