--- a/src/components/projects/_projects.scss
+++ b/src/components/projects/_projects.scss
@@ -66,11 +66,19 @@
 @media screen and (max-width: 400px) {
     .project__container{
         flex-wrap: wrap;
+        padding: 20px 0px;
     }
     .project__images{
         max-width: 300px;
         height: 180px;
         margin: 0 auto;
         margin-top: 20px;
+    }
+    .badge__container {
+        max-width: 300px;
+        margin: 0px;
+    }
+    .project__container {
+        
     }
 }
