--- a/src/components/main/_main.scss
+++ b/src/components/main/_main.scss
@@ -51,31 +51,42 @@ html {
 
 
 @media screen and (max-width: 420px) {
+    .main{
+        max-height: 1200px;
+    }
     .main__container {
-        margin-top: 100px;
+        margin-top: 70px;
         display: block;
-        max-height: 900px;
+        height: 80vh;
+    }
+    .main__heading {
+        margin-top: 20px;
+        text-align: center;
+        font-size: 1.7em;
     }
     .main__title {
-        font-size: 40px;
+        font-size: 1.8em;
+        text-align: center;
+        margin: 10px 0px;
+    }
+    .main__subheading {
+        text-align: center;
+        font-size: 1.2em;
     }
     .profile__image {
         height: 100%;
         max-width: 100%;
     }
     .image__container {
-        width: 100%;
+        width: 70%;
+        margin: 0 auto;
     }
     .text__container {
         text-align: center;
     }
-    .main__heading {
-        text-align: center;
-    }
-    .main__title {
-        text-align: center;
-    }
-    .main__subheading {
-        text-align: center;
+   
+    .button__container2 {
+        display: inline-block;
+        margin-top: 30px;
     }
 }
