optimized icons an images added, hamburguer menu component finished and mediaqueries

--- a/src/assets/styles/lib/_variables.scss
+++ b/src/assets/styles/lib/_variables.scss
@@ -6,6 +6,7 @@ $secondary-color: #310D0D;
 $third-color: #D7DCFF;
 $title-color: #4075FF;
 $light-color: #E5E5E5;
+$white-color: #fff;
 
 
 // Alert colors
@@ -25,6 +26,7 @@ $listfontsize: 20px;
 
 $xsm: 320px;
 $sm: 419px;
+
 // $cellphone1: 479px;
 $md: 767px;
 $lg: 1023px;
