--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -2,7 +2,7 @@
 
 .navbar__container {
     width: 100%;
-    height: 60px;
+    height: 57px;
     background-color: #fff;
     position: fixed;
     top: 0;
@@ -17,6 +17,9 @@
     list-style: none;
     justify-content: space-around;
 }
+.navbar__image--container {
+    display: none;
+}
 
 a {
     text-decoration: none;
@@ -28,14 +31,39 @@ a {
     font-weight: bold;
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: $sm) {
     .navbar__container{
         max-width: 100%;
+        display: flex;
+        justify-content: space-between;
+        height: 54px;
+    }
+    .navbar__image--container {
+        display: flex;
+        margin-right: 20px;
+    }
+    .navbar__image--container a img {
+        display: flex;
+        max-width: 100px;
+        height: 54px;
+    }
+    .navbar__list {
+        display: none;
+        max-width: 100%;
+        margin: 0px auto;
+        padding: 0px;
+    }
+}
+
+@media screen and (max-width: $xsm) {
+    .navbar__container{
+        max-width: 100%;
+        height: 50px;
         display: flex;
         justify-content: space-around;
     }
     .navbar__list {
-        display: block;
+        display: none;
         max-width: 100%;
         margin: 0px auto;
         padding: 0px;
