--- a/src/components/title/_title.scss
+++ b/src/components/title/_title.scss
@@ -7,6 +7,7 @@
     margin-top: 110px;
     margin-bottom: 50px;
     text-align: center;
+    transition: 0.6s;
 }
 
 @media screen and (max-width: 420px) {
