--- a/src/views/home/_home.scss
+++ b/src/views/home/_home.scss
@@ -1,5 +1,9 @@
 @import '../../assets/styles/styles.scss';
 
+*{
+    scroll-behavior: smooth !important;
+}
+
 .home__container {
     background: linear-gradient(0.90turn, $secondary-color , $primary-color );
     background-color: $primary-color;
