--- a/src/components/projects/_projects.scss
+++ b/src/components/projects/_projects.scss
@@ -2,15 +2,17 @@
 
 .project__container {
     width: 80%;
+    padding: 24px 0px;
     margin: 0 auto;
     display: flex;
+    
 }
 .project__p--section {
     max-width: 500px;
 }
 
 .project__title {
-    @include Fonts(23px);
+    @include Fonts(31px);
     margin: 10px 0px 30px 0px;
 }
 
