--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1, h2 {
+    @apply font-bold;
+    @apply text-center;
+    @apply text-white;
+    @apply my-5;
+  }
+  h1 {
+    @apply text-6xl;
+  }
+  h2 {
+    @apply text-4xl;
+    @apply md:text-5xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  p {
+    @apply text-white;
+  }
+}
+
+
+
+@layer components {
+  .ds-bg-gradient {
+    @apply bg-gradient-to-t from-purple-800  to-blue-600;
+  }
+}
